// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> renders text 1`] = `
.c0 {
  color: #3e486e;
  line-height: 1.25;
<<<<<<< HEAD
  font-size: 1.6rem;
=======
  font-size: 1.8rem;
>>>>>>> wip
  font-weight: 400;
}

<div>
  <span
    class="c0"
<<<<<<< HEAD
    font-size="default"
=======
    font-size="hsmall"
>>>>>>> wip
    font-weight="400"
  >
    A simple text
  </span>
</div>
`;

exports[`<Text /> renders text with fontSize 1`] = `
.c0 {
  color: #3e486e;
  line-height: 1.25;
  font-size: 3.2rem;
  font-weight: 400;
}

<div>
  <span
    class="c0"
    font-size="hlarge"
    font-weight="400"
  >
    A large text
  </span>
</div>
`;

exports[`<Text /> renders text with fontWeight 1`] = `
.c0 {
  color: #3e486e;
  line-height: 1.25;
<<<<<<< HEAD
  font-size: 1.6rem;
=======
  font-size: 1.8rem;
>>>>>>> wip
  font-weight: 700;
}

<div>
  <span
    class="c0"
<<<<<<< HEAD
    font-size="default"
=======
    font-size="hsmall"
>>>>>>> wip
    font-weight="700"
  >
    A bold text
  </span>
</div>
`;

exports[`<Text /> renders text with variant 1`] = `
.c0 {
  color: #f66663;
  line-height: 1.25;
<<<<<<< HEAD
  font-size: 1.6rem;
=======
  font-size: 1.8rem;
>>>>>>> wip
  font-weight: 400;
}

<div>
  <span
    class="c0"
<<<<<<< HEAD
    font-size="default"
=======
    font-size="hsmall"
>>>>>>> wip
    font-weight="400"
  >
    A colored text
  </span>
</div>
`;
